...
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cell1"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cell1"
                    android:maxLength="2"
                    android:paddingTop="1dp"
                    android:singleLine="true"
...
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cell2"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cell2"
                    android:maxLength="2"
                    android:paddingTop="1dp"
                    android:singleLine="true"
...
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cell7"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cell7"
                    android:maxLength="2"
                    android:paddingTop="1dp"
                    android:singleLine="true"
...
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cell20"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cell20"
                    android:maxLength="2"
                    android:paddingTop="1dp"
                    android:singleLine="true"
...
    </TableLayout>


    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:theme="@style/FlatButton"
        android:id="@+id/showAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="View Answers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />
...


        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
